examples/test/testpolicy2728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2728
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key0: value46
      key34: value18
      key29: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value34
          key31: value47
      podSelector:
        matchLabels:
          key18: value45
